# qsprmodeler

./: .gitignore  LICENSE  README.md  environment.yml  environment_t.yml  pyproject.toml  setup.cfg
data/: PXR_ChEMBL_data.csv  PXR_training_data.csv  PXR_training_data.xlsx
modules/: setup.py
notebooks/: Analyze_models_PXR.ipynb  PXR_ChEMBL_raw_data_analysis.ipynb  activity_prediction_AutoML.ipynb  activity_prediction_bagging-HIV_classification.ipynb  activity_prediction_data_3Dvs2D_mds_fps.ipynb  activity_prediction_data_extraction_chembl_3.0.ipynb  activity_prediction_data_modeling_chembl_3.0.ipynb  activity_prediction_data_modeling_chembl_3.0_AR.ipynb  activity_prediction_descriptor_analysis.ipynb  activity_prediction_model_comparison.ipynb  activity_prediction_preclinical.ipynb  activity_prediction_t-SNE.ipynb  ar_data_reading_IC50.ipynb  ar_data_reading_IC50EC50_combine.ipynb  ar_data_reading_IC50_expert.ipynb  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsActivity.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsAgonistactivity.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsBinding.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsBmax.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsCtrl.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsDC50.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsEC150.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsEC5.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsEC50.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsEfficacy.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsEmax.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsFI5.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsGI50.csv  ar_homo_sapiens_chembl_3.3_more_ChEMBL_columnsID50.csv  (+25 more)
qsprmodeler/: setup.py
src/: run  (+18 more)
(+328 files in other folders)
