[metadata]
name = qsprmodeler
version = 0.0.2
url = https://github.com/rafalbachorz/qsprmodeler
download_url = https://github.com/rafalbachorz/qsprmodeler
license = MIT
license_files = LICENSE
description = Python toolkit for molecular predictive analytics
long_description = file: README.md
long_description_content_type = text/markdown
author = Rafal Adam Bachorz
author_email = rafal@bachorz.eu
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix

[options]
packages = 
    qsprmodeler/analyzers
    qsprmodeler/auxiliary
    qsprmodeler/constants
    qsprmodeler/data_transformers
    qsprmodeler/model_wrapper

python_requires = >=3.7
install_requires =
    urllib3 < 2.0
    numpy <= 1.24.3
    dill >= 0.3.7
    prometheus_client
    networkx
    pandas >= 1.2.1
    rdkit == 2023.03.2
    scikit-learn >= 1.3.0
    mordred == 1.2.0
    xgboost >= 1.7.6
    hyperopt >= 0.2.7
    tensorflow >= 2.13.0
    matplotlib
    pytest

[options.package_data]
    data_transformers = 
        molecular_descriptors_feature_names_1.2.0.json
        molecular_meta_descriptors_feature_names_1.2.0.json

[options.extras_require]
dev =
    pytest>=6
    pytest-cov